[package]
name = "ld-tst"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my_server"
path = "main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout", "limit", "set-header"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
